--- a/backend/RestaurantBackend/appsettings.json
+++ b/backend/RestaurantBackend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-85JKE61\\SQLEXPRESS;Database=RestaurantDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=db39175.public.databaseasp.net; Database=db39175; User Id=db39175; Password=3Jy!Ho#5n8Z+; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
