--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,3 +69,5 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./publish/
           server-dir: /wwwroot/
+          dangerous-clean-slate: true
+
