--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,33 +9,23 @@ jobs:
 # =========================
 # FRONTEND → NETLIFY
 # =========================
-  frontend:
-    name: Deploy Next.js to Netlify
-    runs-on: ubuntu-latest
+frontend:
+  name: Deploy Next.js to Netlify
+  runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
+  steps:
+    - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+    - name: Deploy to Netlify
+      uses: nwtgck/actions-netlify@v3
+      with:
+        publish-dir: .
+        production-deploy: true
+        deploy-message: "GitHub Actions deploy"
+      env:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 
-      - name: Install deps
-        run: npm install
-
-      - name: Build Next.js
-        run: npm run build
-
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v3
-        with:
-          publish-dir: ./dist
-          production-deploy: true
-          deploy-message: "GitHub Actions deploy"
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
 
 # =========================
 # BACKEND → MONSTERASP.NET
