--- a/backend/PrintAgent/TrivexTechPrintAgent/TrivexTechPrintAgent.csproj
+++ b/backend/PrintAgent/TrivexTechPrintAgent/TrivexTechPrintAgent.csproj
@@ -10,4 +10,6 @@
     <PackageReference Include="System.Drawing.Common" Version="10.0.1" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
