--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Frontend (Netlify) + Backend (MonsterASP)
 on:
   push:
     branches:
-      - main
+      - backend_deploy
 
 jobs:
 # =========================
