--- a/backend/RestaurantBackend/appsettings.json
+++ b/backend/RestaurantBackend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db39175.public.databaseasp.net; Database=db39175; User Id=db39175; Password=3Jy!Ho#5n8Z+; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=db39636.public.databaseasp.net; Database=db39636; User Id=db39636; Password=4j-GS3d%aE!8; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
