--- a/backend/RestaurantBackend/Properties/launchSettings.json
+++ b/backend/RestaurantBackend/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://0.0.0.0:7209;http://0.0.0.0:5071",
+      "applicationUrl": "http://localhost:5071;https://localhost:5072",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
