--- a/backend/RestaurantBackend/appsettings.Development.json
+++ b/backend/RestaurantBackend/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    //Dev connection string
+    "DefaultConnection": "Server=db39175.public.databaseasp.net; Database=db39175; User Id=db39175; Password=3Jy!Ho#5n8Z+; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   }
 }
