--- a/backend/RestaurantBackend/appsettings.json
+++ b/backend/RestaurantBackend/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    //Dev connection string
-    "DefaultConnection": "Server=db39175.public.databaseasp.net; Database=db39175; User Id=db39175; Password=3Jy!Ho#5n8Z+; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
-  }
+  "AllowedHosts": "*"
 }
